--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "format": "prettier --write ./src/ \"package.json\"",
     "lint": "eslint ./src/ --ext ts,svelte --max-warnings 0 --fix",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "prepare": "husky"
   },
   "dependencies": {
     "@lucide/svelte": "^0.513.0",
@@ -23,6 +24,8 @@
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
     "@eslint/js": "^9.29.0",
     "@skeletonlabs/skeleton": "^3.1.3",
     "@skeletonlabs/skeleton-svelte": "^1.2.3",
@@ -37,6 +40,7 @@
     "eslint-plugin-prettier": "^5.5.1",
     "eslint-plugin-svelte": "^3.10.1",
     "globals": "^16.2.0",
+    "husky": "^9.1.7",
     "prettier": "^3.6.2",
     "prettier-plugin-packagejson": "^2.5.16",
     "prettier-plugin-svelte": "^3.4.0",
